2066.	[security]	Handle SIG queries gracefully. [RT #16330]

	--- 9.3.2-WFB-3 released ---

2035.	[func]		Make falling back to TCP on UDP refresh failure
			optional. Default "try-tcp-refresh yes;" for BIND 8
			compatibility. [RT #16123]

	--- 9.3.2-WFB-2 released ---

2025.	[func]		Update "zone serial unchanged" message. [RT #16026]

2024.	[bug]		named emited spurious "zone serial unchanged"
			messages on reload. [RT #16027]

	--- 9.3.2-WFB-1 released ---

2026.   [bug]           Rate limit the two recursive client exceeded messages.
                        [RT #16044]

	--- 9.3.2-WFB released ---

	rate limit "no more recursive clients" message.

	report server->recursionquota.soft in "rndc status".

1941.	[bug]		ncache_adderesult() should set eresult even if no
			rdataset is passed to it. [RT #15642]

	--- 9.3.2 released ---

	--- 9.3.2rc1 released ---

1936.	[bug]		The validator could leak memory. [RT #15544]

1932.	[bug]		hpux: LDFLAGS was getting corrupted. [RT #15530]

	--- 9.3.2b2 released ---

1930.	[port]		HPUX: ia64 support. [RT #15473]

1929.	[port]		FreeBSD: extend use of PTHREAD_SCOPE_SYSTEM.

1926.	[bug]		The Windows installer did not check for empty
			passwords.  BINDinstall was being installed in
			the wrong place. [RT #15483]

1925.	[port]		All outer level AC_TRY_RUNs need cross compiling
			defaults. [RT #15469]

1924.	[port]		libbind: hpux ia64 support. [RT #15473]

1923.	[bug]		ns_client_detach() called too early. [RT #15499]

	--- 9.3.2b1 released ---

1917.	[doc]		funcsynopsisinfo wasn't being treated as verbatim
			when generating man pages. [RT #15385]

1915.	[bug]		dig +ndots was broken. [RT #15215]

1914.	[protocol]	DS is required to accept mnemonic algorithms
			(RFC 4034).  Still emit numeric algorithms for
			compatability with RFC 3658. [RT #15354]

1911.	[bug]		Update windows socket code. [RT #14965]

1910.	[bug]		dig's +sigchase code overhauled. [RT #14933]

1909.	[bug]		The DLV code has been re-worked to make no longer