@@ -1,5 +1,10 @@
 2066.	[security]	Handle SIG queries gracefully. [RT #16330]
 
+2049.	[bug]		Restore SOA before AXFR when falling back from
+			a attempted IXFR when transfering in a zone.
+			Allow a initial SOA query before attempting
+			a AXFR to be requested. [RT #16156]
+
 	--- 9.3.2-WFB-3 released ---
 
 2035.	[func]		Make falling back to TCP on UDP refresh failure
